[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-agent-ai"
version = "0.1.0"
description = "AI travel planning — itineraries, budgets, and packing lists via Claude tool calls."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
travel-agent = "travel_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["travel_agent"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true